2000-10-06  Larry Ewing  <lewing@helixcode.com>

	* resolver.c (impl_HTMLEditor_Resolver_loadURL): actually listen
	to the results of the file load and init and free the environment.
	This makes it very clear that we need more exception types for the
	resolver.

	* editor-control-factory.c (load_from_corba): clean up the login a
	little.
	
2000-10-06  Radek Doulik  <rodo@helixcode.com>

	* menubar.c (insert_image_cb): added link properties while
	inserting image
	(insert_link_cb): added text properties while inserting link

2000-10-06  Larry Ewing  <lewing@helixcode.com>

	* resolver.c (impl_HTMLEditor_Resolver_loadURL): only set the
	exception if we don't know how to open the file.

	* resolver-progressive-impl.c (resolver_sink_add_data): actually
	write the incomming data to the stream.

	* editor-control-factory.c (load_from_corba): use proper return
	valuse if the corba loading is successfull.

2000-10-06  Radek Doulik  <rodo@helixcode.com>

	* properties.c: add title to GtkHTMLEditPropertiesDialog
	(gtk_html_edit_properties_dialog_new): added title parameter
	(switch_page): new signal

	* menubar.c (insert_image_cb): use GTK_HTML_EDIT_PROPERTY_IMAGE,
	not GTK_HTML_EDIT_PROPERTY_LINK
	(insert_image_cb): fix title
	(insert_link_cb): fix title

	* popup.c (popup_show): use GTK_HTML_EDIT_PROPERTY_IMAGE for image
	instead of GTK_HTML_EDIT_PROPERTY_PARAGRAPH

	* image.c (image_properties): don't use cd->obj here, use
	cd->html->engine->cursor->object instead
	added HTMLImage   *image; to GtkHTMLEditImageProperties
	(insert_or_apply): use GtkHTMLEditImageProperties::image here
	removed old code 

2000-10-06  Larry Ewing  <lewing@helixcode.com>

	* resolver-progressive-impl.[ch]: files added. The start of the
	progressive data sink implmentation.

	* resolver.c (impl_HTMLEditor_Resolver_loadURL): change prototype
	to match the new idl, and add some test code to try out the sink
	interface.

	* editor-control-factory.c (load_from_corba): pass the html widget