@@ -1,47 +1,71 @@
 <Root>
-	<menu>
-		<submenu name="Edit" _label="_Edit">
-		        <menuitem name="EditUndo" verb="" _label="_Undo" _descr="Undo the last action"
-			pixtype="stock" pixname="Menu_Undo" accel="&lt;Control&gt;z"/>
+		<commands>
 
-			<menuitem name="EditRedo" verb="" _label="_Redo" _descr="Redo the undone action"
-			pixtype="stock" pixname="Menu_Redo" accel="&lt;Control&gt;r"/>
+			<cmd name="EditUndo" _label="_Undo" _tip="Undo the last action"
+			pixtype="stock" pixname="Undo" accel="&lt;Control&gt;z"/>
 
-			<menuitem/>
+			<cmd name="EditRedo" _label="_Redo" _tip="Redo the undone action"
+			pixtype="stock" pixname="Redo" accel="&lt;Control&gt;r"/>
 
-			<menuitem name="EditCut" verb="" _label="C_ut" _descr="Cut the selection"
-			pixtype="stock" pixname="Menu_Cut" accel="&lt;Control&gt;x"/>
+			<cmd name="EditCut" _label="C_ut" _tip="Cut the selection"
+			pixtype="stock" pixname="Cut" accel="&lt;Control&gt;x"/>
 	
-			<menuitem name="EditCopy" verb="" _label="_Copy"
-			_descr="Copy the selection" pixtype="stock" pixname="Menu_Copy"
+			<cmd name="EditCopy" _label="_Copy"
+			_tip="Copy the selection" pixtype="stock" pixname="Copy"
 			accel="&lt;Control&gt;c"/>
 	
-			<menuitem name="EditPaste" verb="" _label="_Paste"
-			_descr="Paste the clipboard" pixtype="stock" pixname="Menu_Paste"
+			<cmd name="EditPaste" _label="_Paste"
+			_tip="Paste the clipboard" pixtype="stock" pixname="Paste"
 			accel="&lt;Control&gt;v"/>
 	
-			<menuitem/>
+			<cmd name="EditFind" _label="_Find..." _tip="Search for a string"
+			pixtype="stock" pixname="Search" accel="F6"/>
 
-			<menuitem name="EditFind" verb="" _label="_Find..." _descr="Search for a string"
-			pixtype="stock" pixname="Menu_Search" accel="F6"/>
-
-			<menuitem name="EditFindRegex" verb="" _label="Find Rege_x..." _descr="Regular expression search"/>
+			<cmd name="EditFindRegex" _label="Find Rege_x..." _tip="Regular expression search"/>
 	
-			<menuitem name="EditFindAgain" verb="" _label="Find _Again" _descr="Search again for the same string"
-			pixtype="stock" pixname="Menu_Search" accel="&lt;Shift&gt;F6"/>
+			<cmd name="EditFindAgain" _label="Find _Again" _tip="Search again for the same string"
+			pixtype="stock" pixname="Search" accel="&lt;Shift&gt;F6"/>
 	
-			<menuitem name="EditReplace" verb="" _label="_Replace..." _descr="Replace a string"
-			pixtype="stock" pixname="Menu_Search/Replace" accel="F7"/>
+			<cmd name="EditReplace" _label="_Replace..." _tip="Replace a string"
+			pixtype="stock" pixname="Search/Replace" accel="F7"/>
 
-			<menuitem/>
+			<cmd name="EditProperties" _label="_Properties..." _tip="Modify the file's properties"
+			pixtype="stock" pixname="Properties"/>
 
-			<menuitem name="EditProperties" verb="" _label="_Properties..." _descr="Modify the file's properties"
-			pixtype="stock" pixname="Menu_Properties"/>
+			<cmd name="InsertImage" _label="_Image..." _tip="Insert image into document..."/>
+			<cmd name="InsertLink"  _label="_Link..." _tip="Insert HTML link into document..."/>
+			<cmd name="InsertRule"  _label="_Rule..." _tip="Insert rule into document..."/>
+
+		</commands>
+
+	<menu>
+		<submenu name="Edit" _label="_Edit">
+
+		        <menuitem name="EditUndo" verb=""/>
+			<menuitem name="EditRedo" verb=""/>
+
+			<separator/>
+
+			<menuitem name="EditCut" verb=""/>
+			<menuitem name="EditCopy" verb=""/>
+			<menuitem name="EditPaste" verb=""/>
+	
+			<separator/>
+
+			<menuitem name="EditFind" verb=""/>
+			<menuitem name="EditFindRegex" verb=""/>
+			<menuitem name="EditFindAgain" verb=""/>
+			<menuitem name="EditReplace" verb=""/>
+
+			<separator/>
+
+			<menuitem name="EditProperties" verb=""/>
 		</submenu>
+
 		<submenu name="Insert" _label="_Insert">
-			<menuitem name="InsertImage" verb="" _label="_Image..." _descr="Insert image into document..."/>
-			<menuitem name="InsertLink"  verb="" _label="_Link..." _descr="Insert HTML link into document..."/>
-			<menuitem name="InsertRule"  verb="" _label="_Rule..." _descr="Insert rule into document..."/>
+			<menuitem name="InsertImage" verb=""/>
+			<menuitem name="InsertLink"  verb=""/>
+			<menuitem name="InsertRule"  verb=""/>
 		</submenu>
 	</menu>
 </Root>
